fix servicios
Ahora los servicios de usuario, pedido y notificacion siguen el estandar que decidimos usar para el lanzamiento de excepciones